# chatgptr

./: Cargo.toml  README.md
src/: app.rs  chatgpt.rs  chatgptui.rs  lib.rs  main.rs
src/io/: config.rs  mod.rs
