[package]
name = "chatgptr"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Jaden Accord <dev@jadenaccord.com>"]
readme = "README.md"
repository = "https://github.com/Jayby18/chatgptr"
keywords = ["tui", "chatgpt"]
categories = []
exclude = []

[dependencies]
chatgpt_rs = "1.2.3"
common = "0.1.0"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.23.0"
stdr = { git = "https://github.com/Jayby18/stdr", version = "0.1.0" }
tokio = "1.32.0"
