[package]
name = "chatgptr"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Jaden Accord <dev@jadenaccord.com>"]
readme = "README.md"
repository = "https://github.com/jadenaccord/chatgptr"
keywords = ["tui", "chatgpt"]
categories = []
exclude = []

[dependencies]
chatgpt_rs = "1.2.3"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.23.0"
toml = "0.8.2"
